Added the ability to submit an issue.

--- a/FeedCurator/Base.lproj/Main.storyboard
+++ b/FeedCurator/Base.lproj/Main.storyboard
@@ -784,6 +784,9 @@ CA
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
+                                        <connections>
+                                            <action selector="submitIssue:" target="6f7-a7-6o1" id="k5H-eK-t73"/>
+                                        </connections>
                                     </button>
                                 </toolbarItem>
                             </allowedToolbarItems>
