--- a/FeedCurator/Sheets/SubmitIssue.xib
+++ b/FeedCurator/Sheets/SubmitIssue.xib
@@ -8,6 +8,9 @@
         <customObject id="-2" userLabel="File's Owner" customClass="SubmitIssue" customModule="Feed_Curator" customModuleProvider="target">
             <connections>
                 <outlet property="bodyTextView" destination="o03-cB-Dkj" id="cNP-T3-gdG"/>
+                <outlet property="cancelButton" destination="vL2-Tn-ZBB" id="Pzk-Yf-WeB"/>
+                <outlet property="progressIndicator" destination="Zo8-F2-aPi" id="s40-Iz-JsK"/>
+                <outlet property="submitButton" destination="HIP-e2-G7h" id="MCq-Wo-Z47"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -16,14 +19,14 @@
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="528" height="244"/>
+            <rect key="contentRect" x="196" y="240" width="440" height="134"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
-            <view key="contentView" misplaced="YES" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="528" height="244"/>
+            <view key="contentView" id="se5-gp-TjO">
+                <rect key="frame" x="0.0" y="0.0" width="440" height="194"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Nke-Pr-s9U">
-                        <rect key="frame" x="18" y="207" width="144" height="17"/>
+                        <rect key="frame" x="18" y="157" width="144" height="17"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Describe your blog list:" id="26P-8y-Ozz">
                             <font key="font" usesAppearanceFont="YES"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -31,7 +34,7 @@
                         </textFieldCell>
                     </textField>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HIP-e2-G7h">
-                        <rect key="frame" x="443" y="13" width="83" height="32"/>
+                        <rect key="frame" x="343" y="13" width="83" height="32"/>
                         <buttonCell key="cell" type="push" title="Submit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="1vj-g6-bSB">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -45,7 +48,7 @@ DQ
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vL2-Tn-ZBB">
-                        <rect key="frame" x="361" y="13" width="82" height="32"/>
+                        <rect key="frame" x="261" y="13" width="82" height="32"/>
                         <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Nrg-oC-bps">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -58,35 +61,42 @@ Gw
                         </connections>
                     </button>
                     <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="taO-Fj-6WM">
-                        <rect key="frame" x="20" y="49" width="500" height="150"/>
+                        <rect key="frame" x="20" y="49" width="400" height="100"/>
                         <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="3q7-Nt-ACO">
-                            <rect key="frame" x="0.0" y="0.0" width="500" height="150"/>
+                            <rect key="frame" x="0.0" y="0.0" width="400" height="100"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" findStyle="bar" spellingCorrection="YES" smartInsertDelete="YES" id="o03-cB-Dkj">
-                                    <rect key="frame" x="0.0" y="0.0" width="500" height="150"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="400" height="100"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <size key="minSize" width="500" height="150"/>
+                                    <size key="minSize" width="400" height="100"/>
                                     <size key="maxSize" width="500" height="10000000"/>
                                     <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                 </textView>
                             </subviews>
                         </clipView>
                         <constraints>
-                            <constraint firstAttribute="width" constant="500" id="Kgg-9e-uky"/>
-                            <constraint firstAttribute="height" constant="150" id="l3f-P1-XBx"/>
+                            <constraint firstAttribute="width" constant="400" id="Kgg-9e-uky"/>
+                            <constraint firstAttribute="height" constant="100" id="l3f-P1-XBx"/>
                         </constraints>
                         <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="2cR-RE-o55">
                             <rect key="frame" x="-100" y="-100" width="240" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="8XQ-el-5nJ">
-                            <rect key="frame" x="484" y="0.0" width="16" height="150"/>
+                            <rect key="frame" x="384" y="0.0" width="16" height="100"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
+                    <progressIndicator hidden="YES" wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="Zo8-F2-aPi">
+                        <rect key="frame" x="20" y="20" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="6dn-w8-vOX"/>
+                            <constraint firstAttribute="height" constant="20" id="MQL-YQ-jcn"/>
+                        </constraints>
+                    </progressIndicator>
                 </subviews>
                 <constraints>
                     <constraint firstItem="taO-Fj-6WM" firstAttribute="top" secondItem="Nke-Pr-s9U" secondAttribute="bottom" constant="8" symbolic="YES" id="1AQ-Vx-RgR"/>
@@ -96,15 +106,17 @@ Gw
                     <constraint firstItem="Nke-Pr-s9U" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" symbolic="YES" id="8bL-s6-A4V"/>
                     <constraint firstAttribute="trailing" secondItem="taO-Fj-6WM" secondAttribute="trailing" constant="20" symbolic="YES" id="LWT-8i-YXD"/>
                     <constraint firstItem="HIP-e2-G7h" firstAttribute="leading" secondItem="vL2-Tn-ZBB" secondAttribute="trailing" constant="12" symbolic="YES" id="Xae-kh-u2g"/>
+                    <constraint firstItem="Zo8-F2-aPi" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" symbolic="YES" id="Y4F-9J-itL"/>
                     <constraint firstItem="taO-Fj-6WM" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" symbolic="YES" id="dMb-xn-RC0"/>
                     <constraint firstItem="vL2-Tn-ZBB" firstAttribute="centerY" secondItem="HIP-e2-G7h" secondAttribute="centerY" id="lWT-He-7VK"/>
                     <constraint firstItem="Nke-Pr-s9U" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" symbolic="YES" id="sUD-vf-P6n"/>
+                    <constraint firstAttribute="bottom" secondItem="Zo8-F2-aPi" secondAttribute="bottom" constant="20" symbolic="YES" id="v7H-3l-GNI"/>
                 </constraints>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
-            <point key="canvasLocation" x="107" y="160"/>
+            <point key="canvasLocation" x="63" y="105"/>
         </window>
     </objects>
 </document>
