Added sign to Github dialog to make the application more user friendly.

--- a/FeedCurator/Base.lproj/Main.storyboard
+++ b/FeedCurator/Base.lproj/Main.storyboard
@@ -637,7 +637,7 @@ CA
                                         <menuItem title="Sign on to Github" id="PCn-mL-rnh">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
-                                                <action selector="loginToGithub:" target="Ady-hI-5gd" id="yIi-of-6q1"/>
+                                                <action selector="signonToGithub:" target="Ady-hI-5gd" id="7zJ-AE-3ny"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem title="Upload to Github Gist" id="CBI-ee-ZuX">
@@ -769,7 +769,7 @@ CA
                                         </buttonCell>
                                     </button>
                                     <connections>
-                                        <action selector="loginToGithub:" target="6f7-a7-6o1" id="YWV-kV-QgT"/>
+                                        <action selector="signonToGithub:" target="6f7-a7-6o1" id="8MK-qU-TFT"/>
                                     </connections>
                                 </toolbarItem>
                                 <toolbarItem implicitItemIdentifier="E15D0156-524E-4C42-B321-763CB03D32CC" label="Upload OPML" paletteLabel="Upload OPML" toolTip="Upload to Github Gist" image="upload" sizingBehavior="auto" id="t9P-cQ-qNr" customClass="RSToolbarItem" customModule="RSCore">
